--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,6 +136,21 @@ li{
 }
 
 
+/*hr{*/
+/*  margin-top: 20px;*/
+/*  margin-bottom: 20px;*/
+/*  border: 0;*/
+/*  border-top: 1px solid #eee;*/
+/*}*/
+
+.soft{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #eee;
+}
+
+
 
 
 
